kubernetes/apps/media/audiobookshelf/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/advplyr/audiobookshelf:2.37.0
          ports:
            - name: http
              containerPort: 80
          livenessProbe: &probe
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmpfs
              mountPath: /.npm
              subPath: .npm
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: tmpfs
          emptyDir: {}
