kubernetes/apps/media/audiobookshelf/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
